--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,6 +15,7 @@
   <script src="js/scoreboard.js"></script>
   <script src="js/game.js"></script>
   <script src="js/index.js"></script>
+  <script src="js/audio.js"></script>
 </head>
 
 <body>
@@ -24,11 +26,14 @@
       <h1 class="logo"><img src="./img/toy-story-logo.png" alt="ToyStory" title="Toy Story"></h1>
     </div>
   </header>
-
+ 
   <!-- Canvas -->
   <div class="center">
     <canvas id="canvas"></canvas>
   </div>
+<audio id="audio" controls>
+<source type="audio/wav" src="music/music.mp3">
+</audio>
 </body>
 
 </html>
