--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Toy Hacker 🕹</title>
+  <title>🕹🦖 Toy Hacker 🦖🕹</title>
   <link rel="stylesheet" href="css/style.css">
   <script src="js/bullet.js"></script>
   <script src="js/obstacle.js"></script>
@@ -26,14 +26,14 @@
       <h1 class="logo"><img src="./img/toy-story-logo.png" alt="ToyStory" title="Toy Story"></h1>
     </div>
   </header>
- 
+
   <!-- Canvas -->
   <div class="center">
     <canvas id="canvas"></canvas>
   </div>
-<audio id="audio" controls>
-<source type="audio/wav" src="music/music.mp3">
-</audio>
+  <audio id="audio" controls>
+    <source type="audio/wav" src="music/music.mp3">
+  </audio>
 </body>
 
 </html>
